Made method that printing students marks of English. ToDo findBest method